--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "18708975722@163.com" 
 
   # Academic websites
   academia         : # URL
