Remove pronouns and bio from author configuration
Removed pronouns and bio fields from author section.

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Zhaoqin Wang"
-  pronouns         : "He"# example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  pronouns         : #"He"# example: "she/her"  
+  bio              : #"Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Dalian Maritime University"
   uri              : # URL
